--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroui/react": "^2.8.7",
+    "@hookform/resolvers": "^5.2.2",
+    "@tanstack/react-query": "^5.90.15",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.23.26",
     "next": "16.1.1",
+    "next-intl": "^4.6.1",
+    "next-themes": "^0.4.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@iconify/react": "^6.0.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
