--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "socket.io-client": "^4.8.3",
+    "use-debounce": "^10.0.6",
     "zod": "^4.2.1"
   },
   "devDependencies": {
